[project]
name = "url_router"
authors = [
    { name = "Ahmed Alsahly", email = "ahmed@alsahly.com"}
]
description = "An application to route URL intended to provide support for multi language pages made with page builder"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
